--- a/theme/sections/instagram.liquid
+++ b/theme/sections/instagram.liquid
@@ -12,7 +12,7 @@
       <img lazyload="auto" class="content" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
       
       {% comment %} VIDEO {% endcomment %}
-      <video class="content" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload>
+      <video class="content" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload playsinline webkit-playsinline>
         <source rv-src="image.media_url" type="video/mp4">
         Your browser does not support the video tag.
       </video>
