--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -74,8 +74,8 @@
          
         <ul class="nav small" style="pointer-events: all;">
           <li class="nav-item">
-            <div class="nav-link" rv-i18n-text="'snippets.footer.copyright'">
-              {{'snippets.footer.copyright'|t}}
+            <div class="nav-link">
+              <span rv-text="year"></span><span rv-i18n-text="'snippets.footer.copyright'">{{'snippets.footer.copyright'|t}}</span>
             </div>
           </li>   
           <li class="nav-item">
