--- a/src/scss/bundle.scss
+++ b/src/scss/bundle.scss
@@ -36,3 +36,6 @@
 @import '../ts/components/components';
 @import '../ts/binders/index';
 @import 'sections/index';
+
+// Riba
+@import '../../node_modules//@ribajs/shopify/src/index';
