--- a/theme/layout/checkout.liquid
+++ b/theme/layout/checkout.liquid
@@ -23,7 +23,7 @@
 
     {{ order_summary_toggle }}
 
-    <div class="content" data-content>
+    <div class="content lazy" data-content>
       <div class="wrap">
         <div class="sidebar" role="complementary">
           <div class="sidebar__header">
