--- a/theme/sections/instagram-scrollbar.liquid
+++ b/theme/sections/instagram-scrollbar.liquid
@@ -20,13 +20,13 @@
     <div class="col-7 col-md-5 px-0 content-box ratio-1-1 cursor-pointer" rv-each-image="media.data" rv-add-class="image.media_type" rv-data-url="image.permalink" rv-on-tap="onTap">
       
       {% comment %} IMAGE {% endcomment %}
-      <img lazyload="auto" class="content" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-alt="image.caption">
+      <img lazyload="lazy" class="content lazy" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-alt="image.caption">
 
       {% comment %} CAROUSEL_ALBUM {% endcomment %}
-      <img lazyload="auto" class="content" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-alt="image.caption">
+      <img lazyload="lazy" class="content lazy" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-alt="image.caption">
       
       {% comment %} VIDEO {% endcomment %}
-      <video class="content" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload>
+      <video class="content lazy" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload>
         <source rv-src="image.media_url" type="video/mp4">
         Your browser does not support the video tag.
       </video>
