--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -3,7 +3,7 @@
   {% comment %}
     MAINBAR
   {% endcomment %}
-  <fsbdr-mainbar>
+  <fsbdr-mainbar rv-dataset="dataset | json" rv-filter="filter | json">
     <div class="row mainbar pt-1">
 
       {% comment %}
