--- a/src/scss/_images.scss
+++ b/src/scss/_images.scss
@@ -3,7 +3,7 @@ img {
 }
 
 .lazy {
-  background-image: url(loading.svg);
-  background-repeat: no-repeat;
-  background-position: center center;
+  // background-image: url(loading.svg);
+  // background-repeat: no-repeat;
+  // background-position: center center;
 }
