--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -79,12 +79,13 @@
               {% assign color = product.metafields["global"][colorIndex] %}
               {% assign handle = product.metafields["global"][HandleIndex] %}
               {% if color != blank and handle != blank %}
-                <div
+                <a
                   class="col-auto px-1 cursor-pointer"
-                  rv-route="'{{ all_products[handle].url }}'"
+                  href="{{ collection.url }}{{ all_products[handle].url }}"
+                  rv-route="'{{ collection.url }}{{ all_products[handle].url }}'"
                 >
                   <div class="styleicon-circle option-color option-metafield-color option-color-{{ color }}" rv-style-background-color="'{{ color }}'" style="width: 20px; height: 20px;"></div>
-                </div>
+                </a>
               {% endif %}
             {% endfor %}
           </div>
